--- a/index.html
+++ b/index.html
@@ -59,28 +59,35 @@
 
     <main>
         <!-- jumbotron inicia -->
-        <div class=" p-5  rounded jumbotron">
-            <h1>Ruta 40 Mendoza Argentina </h1>
-            <p>Dime si no te gustaria recorrerla?</p>
+        <div class="letras">
+            <div class="p-5  rounded jumbotron">
+                <div class="ju"><h1>Ruta 40 Mendoza Argentina
+                </h1><p>Dime si no te gustaria recorrerla?</p>
+            </div></div>
         </div>
         <!-- jumbotron fin -->
-        <div class="presentacion">
-            <h1>En ruteros queremos mostrarte lo hermoso de nuestro pais.</h1>
-            <p>"¡Bienvenidos a Ruteros! En nuestro portal, te invitamos a explorar destinos únicos y emocionantes a
-                través de las rutas de nuestro pais. Somos apasionados viajeros que creemos que la verdadera aventura
-                comienza cuando te alejas de las ciudades convencionales y te sumerges en paisajes increibles.
-            </p>
-        </div>
 
-    <div class="galery-index">
-            <p>En 'Ruteros' encontrarás información sobre rutas escénicas, puntos de interés, recomendaciones y
-                experiencias. Nuestro objetivo es inspirarte a salir de tu zona de confort y descubrir nuevos horizontes
-                a bordo de tu vehículo, conectando con la naturaleza y la cultura de cada lugar que visites.
+        <!-- inicia intro -->
+        <div id="intro" class="basic-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <div class="section-title">INTRO</div>
+                            <h2>En ruteros queremos mostrarte lo hermoso de nuestro pais.</h2>
+                            <p>"¡Bienvenidos a Ruteros! En nuestro portal, te invitamos a explorar destinos únicos y emocionantes a través de las rutas de nuestro pais. Somos apasionados viajeros que creemos que la verdadera aventura comienza cuando te alejas de las ciudades convencionales y te sumerges en paisajes increibles.</p>
+                            <p class="testimonial-text">En 'Ruteros' encontrarás información sobre rutas escénicas, puntos de interés, recomendaciones y experiencias. Nuestro objetivo es inspirarte a salir de tu zona de confort y descubrir nuevos horizontes a bordo de tu vehículo, conectando con la naturaleza y la cultura de cada lugar que visites. </p>
+                        </div> 
+                    </div> 
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="./img/img-intro.avif" alt="alternative">
+                        </div> 
+                    </div> 
+                </div> 
+            </div> 
+        </div> 
 
-                ¡Prepárate para vivir experiencias inolvidables y crear recuerdos que perdurarán toda la vida! Únete a
-                nosotros en este viaje por las rutas de nuestro pais y descubre la belleza y la magia que se esconde en
-                cada curva del camino. ¡Bienvenidos a 'Rutas Inexploradas', donde la aventura comienza en la carretera!"
-            </p>
             <div class="galery-index">
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
