--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -50,51 +50,104 @@
         </nav>
         <!-- finaliza barra navegacion -->
     </header>
-    <div class="presdestinos">
-        <h2>Te mostraremos algunos destinos increibles de nuestro pais</h2>
+        <div class="presdestinos">
+            <h2>Te mostraremos algunos destinos increibles de nuestro pais</h2>
+            </div>
+        <div class="destino-cordoba">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="../img/destinos.cordoba.jpg" alt="Dique san roque">
+                        </div> 
+                    </div> 
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2> “Entre Sierras y Cultura: Explorando la Diversidad Cordobesa”</h2>
+                            <p class="PD">La ciudad de Córdoba, Argentina, es sin dudas uno de los principales destinos turísticos de nuestro país. Su paisaje de sierras y maravillosos ríos, fundido profundamente con la naturaleza, cautiva a los visitantes año tras año. La provincia, conocida como "corazón del país", recibió su nombre en la época colonial</p>
+                            <p class="PD">Con sus montañas,diques,rios y hasta cascadas,hacen de la provincia de cordoba un lugar increible para rutear y detenerte acampar, pescar, etc. </p>
+                            <button class="AD"><a href="https://www.lavoz.com.ar/regionales/20-lugares-que-tenes-que-conocer-en-cordoba-para-poder-decir-que-conoces-cordoba/" target="_blank" class="AD">MAS INFO</a></button>
+                        </div> 
+                    </div> 
+                </div> 
+            </div>
+            <div class="sanluis">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <div class="image-container">
+                                <img class="img-fluid" src="../img/destinos.san-luis.jpg" alt="villa de merlo">
+                            </div> 
+                        </div> 
+                        <div class="col-lg-5">
+                            <div class="text-container">
+                                <h2> “San Luis: Donde la Naturaleza y la Historia se Abrazan”</h2>
+                                <p class="PD">San luis se encuentra al lado de cordoba ideal para rutear ambas no?. Como esta hermosa foto tomada en la villa de merlo, san luis es un provinciaen su totalidad hermosa. Ideal para ir a descansar y relarje con unos mates admirando las montañas o recorriendo sus rutas.</p>
+                                <p class="PD">En San Luis hay más de 20 opciones diferentes para conocer, disfrutar y practicar una diversidad de deportes acuáticos. Inmersos en una geografía natural inigualable, los espejos de agua invitan a la aventura.</p>
+                                <button><a href="https://www.welcomeargentina.com/provincia-san-luis/" target="_blank" class="AD">MAS INFO</a></button>
+                            </div> 
+                        </div> 
+                    </div> 
+                </div>
+        </div>
+        <div class="sanluis">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="../img/destinos.mendoza.jpg" alt="iglesias en la roca">
+                        </div> 
+                    </div> 
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2> “Destacada por su belleza paisajística y su valioso patrimonio histórico”</h2>
+                            <p class="PD">Provincia de mendoza, en su totalidad llena de hermosos paisajes de la cordillera de los andes, lagos,volcanes etc.
+                                Solo imagina estar recorriendo la ruta 7, entrando y saliendo de tunels con vistas increibles, rutas en alturas con cuestas como la de caracoles que une argentina-chile. Ideal para recorrer en familia o en motos con amigos o tu pareja, o porque no instalarte unos dias en alguna de sus estancias de viñedos. Solo debes animarte.</p>
+                            <button><a href="https://mendoza.tur.ar/" target="_blank" class="AD">MAS INFO</a></button>
+                        </div> 
+                    </div> 
+                </div> 
+            </div>
+        </div>
+        <div class="sanluis">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="../img/destinos-larioja.jpg" alt="Parque de los Dinosaurios">
+                        </div> 
+                    </div> 
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2> “La Rioja: Donde la Historia y la Naturaleza Se Entrelazan”</h2>
+                            <p class="PD">La rioja es una provincia que tiene de todo parques eolicos, montañas,lagos,viñedos, plantaciones de aceitunas y lo mas importante hermosas rutas para recorrer. Los paisajes riojanos son un entorno perfecto para desarrollar actividades y vivir experiencias increíbles en torno a la aventura, a la cultura, en los caminos con historia, en senderos naturales, es un destino diferente para visitar lugares de tierra colorada y  majestuosos paisajes, colores que impactan y quedaran en el recuerdo de cada visitante.</p>
+                            <button><a href="https://turismo.larioja.gob.ar/" target="_blank" class="AD">MAS INFO</a></button>
+                        </div> 
+                    </div> 
+                </div> 
+            </div>
+        </div>
+        <div class="sanluis">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="../img/destinos-rionegro.jpg" alt="Bariloche">
+                        </div> 
+                    </div> 
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2> “Rio Negro: Desde majestuosas montañas hasta extensas costas, esta provincia ofrece una diversidad de experiencias.”</h2>
+                            <p class="PD">La provincia de rio negro es una de las mas hermosas del pais, su ciudad mas turistica es la emblematica Bariloche hermosa todo el año.
+                                Ideal para recorrer el tramo de la ruta 40 entre montañas lagos y paisajes realmente increhibles desde el lago Nahuel Huapi hasta el increible El Bolson o proque no recorrer la R40 y despues la RN23 hasta las grutas y disfrutar desde la cordillera hasta nuestro mar argentino.</p>
+                            <button><a href="https://rionegro.gov.ar/geografia" target="_blank" class="AD">MAS INFO</a></button>
+                        </div> 
+                    </div> 
+                </div> 
+            </div>
+        </div>
     </div>
-    <div class="contenedor1">
-        <img class="img-fluid" src="../img/destinos.cordoba.jpg" alt="dique san roque">
-    </div>
-    <div class="PD">
-        <p>La ciudad de Córdoba, Argentina, es sin dudas uno de los principales destinos turísticos de nuestro país. Su paisaje de sierras y maravillosos ríos, fundido profundamente con la naturaleza, cautiva a los visitantes año tras año. La provincia, conocida como "corazón del país", recibió su nombre en la época colonial</p>
-        <p>Con sus montañas,diques,rios y hasta cascadas,hacen de la provincia de cordoba un lugar increible para rutear y detenerte acampar, pescar, etc. </p>
-        <a href="https://www.lavoz.com.ar/regionales/20-lugares-que-tenes-que-conocer-en-cordoba-para-poder-decir-que-conoces-cordoba/" target="_blank">MAS INFO</a>
-    </div>
-    <div class="sanluis">
-        <img class="img-fluid" src="../img/destinos.san-luis.jpg" alt="villa de merlo">
-    </div>
-    <div class="PD">
-        <p>
-            San luis se encuentra al lado de cordoba ideal para rutear ambas no?. Como esta hermosa foto tomada en la villa de merlo, san luis es un provinciaen su totalidad hermosa. Ideal para ir a descansar y relarje con unos mates admirando las montañas o recorriendo sus rutas.
-        </p>
-        <a href="https://www.welcomeargentina.com/provincia-san-luis/" target="_blank">MAS INFO</a>
-    </div>
-    <div class="mendoza">
-        <img class="img-fluid" src="../img/destinos.mendoza.jpg" alt="iglesias en la roca">
-    </div>
-    <div class="PD">
-        <p>Provincia de mendoza, en su totalidad llena de hermosos paisajes de la cordillera de los andes, lagos,volcanes etc.
-            Solo imagina estar recorriendo la ruta 7, entrando y saliendo de tunels con vistas increibles, rutas en alturas con cuestas como la de caracoles que une argentina-chile. Ideal para recorrer en familia o en motos con amigos o tu pareja, o porque no instalarte unos dias en alguna de sus estancias de viñedos. Solo debes animarte.</p>
-            <a href="https://mendoza.tur.ar/" target="_blank">MAS INFO</a>
-    </div>
-    <div class="larioja">
-        <img class="img-fluid" src="../img/destinos-larioja.jpg" alt="cuesta miranda">
-
-    </div>
-    <div class="PD">
-        <p>La rioja es una provincia que tiene de todo parques eolicos, montañas,lagos,viñedos, plantaciones de aceitunas y lo mas importante hermosas rutas para recorrer. Los paisajes riojanos son un entorno perfecto para desarrollar actividades y vivir experiencias increíbles en torno a la aventura, a la cultura, en los caminos con historia, en senderos naturales, es un destino diferente para visitar lugares de tierra colorada y  majestuosos paisajes, colores que impactan y quedaran en el recuerdo de cada visitante.</p>
-        <a href="https://turismo.larioja.gob.ar/" target="_blank">MAS INFO</a>
-    </div>
-    <div class="rionegro">
-        <img class="img-fluid" src="../img/destinos-rionegro.jpg" alt="bariloche">
-    </div>
-    <div class="PD">
-        <p>La provincia de rio negro es una de las mas hermosas del pais, su ciudad mas turistica es la emblematica Bariloche hermosa todo el año.
-            Ideal para recorrer el tramo de la ruta 40 entre montañas lagos y paisajes realmente increhibles desde el lago Nahuel Huapi hasta el increible El Bolson o proque no recorrer la R40 y despues la RN23 hasta las grutas y disfrutar desde la cordillera hasta nuestro mar argentino.</p>
-            <a href="https://rionegro.gov.ar/geografia" target="_blank">MAS INFO</a>
-    </div>
-
+    </header>
         <!-- inicia footer -->
         <footer>
             <p>Porque viajar al exterior si nuestro pais lo tiene todo?</p>
